# C-Notebook-QA-

./: CMakeLists.txt  QA.cpp  QA.h  README.md  app.rc
